--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,14 @@
 <div class="container">
   <app-navi></app-navi>
   <div class="row">
-    <div class="col-mb-3">
+    <div class="col-md-3">
       <app-brand></app-brand>
+      <br>
       <app-color></app-color>
+      <br>
       <app-customer></app-customer>
     </div>
-    <div class="col-mb-9">
+    <div class="col-md-9">
       <app-car></app-car>
     </div>
   </div>
