--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,16 +6,10 @@
       <app-brand></app-brand>
       <br>
       <app-color></app-color>
-      <br>
-      <app-customer></app-customer>
+      <!-- <app-customer></app-customer> -->
     </div>
     <div class="col-md-9">
-      <app-car></app-car>
+      <router-outlet></router-outlet>
     </div>
   </div>
-  
 </div>
-
-
-
-<router-outlet></router-outlet>
