--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,6 +1,12 @@
 <thead>
   <th>Markalar</th>
 </thead>
-<ul *ngFor= "let brand of brands" class="list-group">
-    <li class="list-group-item">{{brand.brandName}}</li>
+<ul class="list-group" id="collapseExample">
+  <li (click)= "clearCurrentBrand()"
+  routerLink = "/cars"
+  [class]="getAllBrandClass()">Tüm Markalar</li>
+  <li (click)= "setCurrentBrand(brand)"
+  routerLink = "/cars/brands/{{brand.brandId}}"
+  *ngFor="let brand of brands"
+  [class]="getCurrentBrandClass(brand)">-{{brand.brandName}}</li>
 </ul>
