--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,23 +1,32 @@
-<div *ngIf="dataLoaded==false" class="spinner-border" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-<table class="table">
-    <thead>
-        <tr>
-            <th>MarkaId</th>
-            <th>RenkId</th>
-            <th>Şuanki Fiyat</th>
-            <th>Model Yılı</th>
-            <th>Araç Açıklaması</th>
-            <th>Müsait Durumu</th>
-        </tr>
-    </thead>
-    <tr *ngFor= "let car of cars">
-        <td>{{car.brandId}}</td>
-        <td>{{car.colorId}}</td>
-        <td>{{car.dailyPrice}}</td>
-        <td>{{car.modelYear}}</td>
-        <td>{{car.carDescription}}</td>
-        <td>{{car.isAvailable}}</td>
-    </tr>
-</table>
+<div *ngIf="dataLoaded == false" class="spinner-border" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+<h3 *ngIf="cars.length < 1 && dataLoaded" class="">
+  The Cars You Searched Couldn't Find
+</h3>
+<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+    <div *ngFor="let car of cars" class="col">
+        <div class="card shadow-sm">
+            <img class="bd-placeholder-img card-img-top"
+            width="100%"
+            height="225" [src]=(safeUrls[car.id]) alt="{{car.carDescription}}">
+
+      
+          <div class="card-body">
+            <p class="card-text">
+              {{car.carDescription}}
+            </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <button routerLink="/cars/{{ car.id }}" type="button" class="btn btn-sm btn-outline-secondary">
+                  More
+                </button>
+              </div>
+              <small class="text-muted">Günlük Ücret {{car.dailyPrice}}</small>
+              <small class="text-muted">Renk {{car.colorId}}</small>
+              <small class="text-muted">Marka {{car.brandId}}</small>
+            </div>
+          </div>
+        </div>
+      </div>
+</div>
