--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,32 +1,60 @@
+
+
+<div class="mb-3">
+  <label for="filterText" class="form-label">Search Car:</label>
+  <input type="text" [(ngModel)]="filterText" class="form-control" id="filterText" placeholder="Enter Search Term">
+</div>
+<div *ngIf="filterText" class="alert alert-primary">
+You are searching for {{filterText}}
+</div>
+
 <div *ngIf="dataLoaded == false" class="spinner-border" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
-<h3 *ngIf="cars.length < 1 && dataLoaded" class="">
+
+<h3 *ngIf="dataLoaded && carDetails.length < 1" class="">
   The Cars You Searched Couldn't Find
 </h3>
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-    <div *ngFor="let car of cars" class="col">
-        <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top"
-            width="100%"
-            height="225" [src]=(safeUrls[car.id]) alt="{{car.carDescription}}">
-
-      
-          <div class="card-body">
-            <p class="card-text">
-              {{car.carDescription}}
-            </p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button routerLink="/cars/{{ car.id }}" type="button" class="btn btn-sm btn-outline-secondary">
-                  More
-                </button>
-              </div>
-              <small class="text-muted">Günlük Ücret {{car.dailyPrice}}</small>
-              <small class="text-muted">Renk {{car.colorId}}</small>
-              <small class="text-muted">Marka {{car.brandId}}</small>
-            </div>
-          </div>
+  <div *ngFor="let car of carDetails | carFilterPipe:filterText" class="col">
+    <div class="card shadow-sm">
+      <img
+        class="bd-placeholder-img card-img-top"
+        width="100%"
+        height="225"
+        [src]="safeUrls[car.carId]"
+        alt="{{ car.carDescription }}"
+      />
+      <div class="card-body">
+        <p class="card-text">
+          {{ car.carDescription }}
+        </p>
+        <div class="d-flex justify-content-between align-items-center">
+          <small class="text-muted">Günlük Ücret: {{ car.dailyPrice | currency:'₺':'symbol' }}</small>
+        </div>
+        <div class="d-flex justify-content-between align-items-center">
+          <small class="text-muted">{{ car.brandName }}</small>
+          <small class="text-muted">{{ car.colorName }}</small> 
+        </div>
+        <br>
+        <div class="d-flex justify-content-between align-items-center">
+         
+            <button
+              routerLink="/cars/{{ car.carId }}"
+              type="button"
+              class="btn btn-primary"
+            >
+              Detail
+            </button>
+            <button
+              (click)="addToCart(car)"
+              type="button"
+              class="btn btn-secondary"
+            >
+              Add To Cart
+            </button>
         </div>
       </div>
+    </div>
+  </div>
 </div>
