--- a/src/app/components/navi/navi.component.html
+++ b/src/app/components/navi/navi.component.html
@@ -28,14 +28,16 @@
                 Admin
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a routerLink="admin/cars/add" class="dropdown-item">Car Add</a></li>
+                <li><a routerLink="admin/cars-manager" class="dropdown-item">Car Manager</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item">Go To Cart</a></li>
+                <li><a class="dropdown-item">Brand Manager</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li><a class="dropdown-item">Color Manager</a></li>
               </ul>
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" routerLink="login">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Register</a>
