--- a/src/app/components/cart-summary/cart-summary.component.html
+++ b/src/app/components/cart-summary/cart-summary.component.html
@@ -15,6 +15,6 @@
         ></a>
     </li>
     <li><hr class="dropdown-divider" /></li>
-    <li><a class="dropdown-item">Go To Cart</a></li>
+    <li><a routerLink="payment" class="dropdown-item">Go To Payment</a></li>
   </ul>
 </li>
