--- a/src/app/components/car-manager/car-manager.component.html
+++ b/src/app/components/car-manager/car-manager.component.html
@@ -1,4 +1,154 @@
 <div class="container">
+    <h1 class="title">CAR MANAGER</h1>
     <app-car-add></app-car-add>
-    
+    <br>
+    <table *ngIf="cars" class="table">
+        <thead>
+          <tr>
+            <th>BrandId</th>
+            <th>ColorId</th>
+            <th>Daily Price</th>
+            <th>Model Year</th>
+            <th>Car Description</th>
+            <th>Is Available</th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let car of cars">
+            <td>{{ car.brandId }}</td>
+            <td>{{ car.colorId }}</td>
+            <td>{{ car.dailyPrice }}</td>
+            <td>{{ car.modelYear.toString().slice(0,10) }}</td>
+            <td>{{ car.carDescription }}</td>
+            <td>{{ car.isAvailable }}</td>
+            <td>
+              <button
+              (click)="setCurrentCar(car)"
+              type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#carEditForm">
+                Edit
+              </button>
+            </td>
+            <td>
+                <button
+                (click)="setCarToDelete(car)"
+                type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                  DELETE
+                </button>
+              </td>
+          </tr>
+        </tbody>
+      </table>
+</div>
+
+
+<!-- Car Editor Modal -->
+<div class="modal fade" id="carEditForm" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Update Car</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div *ngIf="dataLoaded == false" class="spinner-border" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            <form *ngIf="dataLoaded && currentCar" [formGroup]= "carUpdateForm">
+              <div class="mb-3">
+                <label for="carDescription">Car Id</label>
+                <div class="form-group">
+                    <input type="text" id="id" formControlName="id" class="form-control" placeholder="{{currentCar.id}}" value="{{currentCar.id}}" readonly/>
+                </div>
+              </div>
+                <div class="mb-3">
+                    <label for="carDescription">Car Name</label>
+                    <div class="form-group">
+                        <input type="text" id="carDescription" formControlName="carDescription" class="form-control" placeholder="{{currentCar.carDescription}}" value="{{currentCar.carDescription}}"/>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="brands">Brand Id</label>
+                    
+                    <div class="form-group">
+                        <select type="number" class="form-select" formControlName="brandId" name="brands" id="brands">
+                            <option value="" class="form-control" id="brandId" selected disabled hidden>{{currentCarDetail.brandName}}</option>
+                            <option [ngValue]="brand.brandId" class="form-control" id="brandId" *ngFor="let brand of brands">{{brand.brandName}}</option>
+                          </select>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <label for="colors">Color Id</label>
+
+                    <div class="form-group">
+                        <select type="number" class="form-select" formControlName="colorId" name="colors" id="colors">
+                            <option value="" class="form-control" id="colorId" selected disabled hidden>{{currentCarDetail.colorName}}</option>
+                            <option [ngValue]="color.colorId" class="form-control" id="brandId" *ngFor="let color of colors">{{color.colorName}}</option>
+                          </select>
+                    </div>
+                </div>
+                
+                <div class="mb-3">
+                    <label for="modelYear">Model Year</label>
+                    <input value="" type="date" id="modelYear" formControlName="modelYear" name="modelYear" class="form-control" >
+                </div>
+                
+                <div class="mb-3">
+                    <label for="dailyPrice">Daily Price</label>
+                    <div class="form-group">
+                        <input value="{{currentCar.dailyPrice}}" type="number" id="dailyPrice" formControlName="dailyPrice" class="form-control" placeholder="Daily Price"/>
+                    </div>
+                </div>
+                
+                <div class="mb-3">
+                    <div class="form-check form-switch">
+                        <input class="form-check-input" type="checkbox" checked id="isAvailable" formControlName="isAvailable">
+                        <label class="form-check-label" for="isAvailable">Available</label>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#updateConfirmModal">Save Changes</button>
+        </div>
+      </div>
+    </div>
+</div>
+<!-- Update Confirm Modal -->
+<div *ngIf="currentCar" class="modal fade" id="updateConfirmModal" tabindex="-2" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Confirm to Update - "{{currentCar.carDescription}}"
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+          <button (click)="updateCar(carUpdateForm.value)" data-bs-dismiss="modal" type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+</div>
+<!-- Delete Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-2" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Delete?</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Do you really want to delete this car?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button (click)="deleteCar(carToDelete)" data-dismiss="modal" type="button" class="btn btn-danger">DELETE</button>
+        </div>
+      </div>
+    </div>
 </div>
