Register Added and Refactored

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -43,6 +43,16 @@
       >
         Sign In
       </button>
+      <div class="footer">
+        <br>
+        <p>New Customer?</p>
+        <button
+        routerLink="/register"
+        class="w-80 btn btn-lg btn-primary"
+      >
+        Sign Up Now!
+      </button>
+      </div>
     </form>
   </main>
 </body>
