--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -59,7 +59,7 @@
         </button>
         <div class="footer">
           <br>
-          <p>You have an account?</p>
+          <p>Do you have an account?</p>
           <button
           routerLink="/login"
           class="w-80 btn btn-lg btn-primary"
